--- a/pom.xml
+++ b/pom.xml
@@ -32,4 +32,80 @@
             <version>5.1.6</version>
         </dependency>
     </dependencies>
+    <build>
+        <!-- Hacemos que en la fase de package nos traiga todas las
+        dependencias -->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>theMainClass</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <!--<plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-dependency-plugin</artifactId>
+              <executions>
+                 <execution>
+                    <id>copy</id>
+                    <phase>package</phase>
+                    <goals>
+                       <goal>copy-dependencies</goal>
+                    </goals>
+                 </execution>
+              </executions>
+           </plugin>
+          <plugin>
+              <groupId>org.codehaus.izpack</groupId>
+              <artifactId>izpack-maven-plugin</artifactId>
+              <executions>
+                <execution>
+                   <phase>package</phase>
+                   <goals>
+                      <goal>izpack</goal>
+                   </goals>
+                   <configuration>
+                      <izpackBasedir>target</izpackBasedir>
+                      <installerFile>target/Setup-maven-izpack-1.0-SNAPSHOT.jar</installerFile>
+                   </configuration>
+                </execution>
+              </executions>
+              <dependencies>
+                <dependency>
+                  <groupId>org.codehaus.izpack</groupId>
+                  <artifactId>izpack-standalone-compiler</artifactId>
+                  <version>4.2.1</version>
+                </dependency>
+              </dependencies>
+            </plugin>-->
+        </plugins>
+    </build>
 </project>
